<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:title="@string/game_bar_title"
    android:icon="@drawable/ic_gamepad">

    <com.android.settingslib.widget.MainSwitchPreference
        android:key="game_bar_enable"
        android:title="@string/game_bar_enable_title"
        android:summary="@string/game_bar_summary"
        android:defaultValue="false"
        android:icon="@drawable/ic_toggle_on" />

    <PreferenceCategory
        android:title="@string/overlay_features_title"
        android:dependency="game_bar_enable">

        <SwitchPreferenceCompat
            android:key="game_bar_fps_enable"
            android:title="@string/fps_overlay_title"
            android:summary="@string/fps_overlay_summary"
            android:defaultValue="true"
            android:icon="@drawable/ic_fps" />

        <SwitchPreferenceCompat
            android:key="game_bar_temp_enable"
            android:title="@string/device_temp_title"
            android:summary="@string/device_temp_summary"
            android:defaultValue="false"
            android:icon="@drawable/ic_temp" />

        <Preference
            android:title="@string/cpu_metrics_title"
            android:selectable="false" />

        <SwitchPreferenceCompat
            android:key="game_bar_cpu_usage_enable"
            android:title="@string/cpu_usage_title"
            android:summary="@string/cpu_usage_summary"
            android:defaultValue="true"
            android:icon="@drawable/ic_cpu" />

        <SwitchPreferenceCompat
            android:key="game_bar_cpu_clock_enable"
            android:title="@string/cpu_clock_title"
            android:summary="@string/cpu_clock_summary"
            android:defaultValue="false"
            android:icon="@drawable/ic_speed" />

        <SwitchPreferenceCompat
            android:key="game_bar_cpu_temp_enable"
            android:title="@string/cpu_temp_title"
            android:summary="@string/cpu_temp_summary"
            android:defaultValue="false"
            android:icon="@drawable/ic_cpu_temp" />

        <Preference
            android:title="@string/gpu_metrics_title"
            android:selectable="false" />

        <SwitchPreferenceCompat
            android:key="game_bar_gpu_usage_enable"
            android:title="@string/gpu_usage_title"
            android:summary="@string/gpu_usage_summary"
            android:defaultValue="true"
            android:icon="@drawable/ic_gpu" />

        <SwitchPreferenceCompat
            android:key="game_bar_gpu_clock_enable"
            android:title="@string/gpu_clock_title"
            android:summary="@string/gpu_clock_summary"
            android:defaultValue="false"
            android:icon="@drawable/ic_speed" />

        <SwitchPreferenceCompat
            android:key="game_bar_gpu_temp_enable"
            android:title="@string/gpu_temp_title"
            android:summary="@string/gpu_temp_summary"
            android:defaultValue="false"
            android:icon="@drawable/ic_gpu_temp" />

        <SwitchPreferenceCompat
            android:key="game_bar_ram_enable"
            android:title="@string/ram_usage_title"
            android:summary="@string/ram_usage_summary"
            android:defaultValue="false"
            android:icon="@drawable/ic_ram" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/fps_settings_title"
        android:dependency="game_bar_fps_enable">
        
        <ListPreference
            android:key="game_bar_fps_method"
            android:title="@string/fps_method_title"
            android:summary="@string/fps_method_summary"
            android:defaultValue="new"
            android:entries="@array/game_bar_fps_method_entries"
            android:entryValues="@array/game_bar_fps_method_values"
            android:icon="@drawable/ic_api" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/customization_title"
        android:dependency="game_bar_enable">
            
        <SeekBarPreference
            android:key="game_bar_text_size"
            android:title="@string/text_size_title"
            android:summary="@string/text_size_summary"
            android:defaultValue="14"
            android:max="32"
            android:min="12"
            android:icon="@drawable/ic_text_size" />

        <SeekBarPreference
            android:key="game_bar_background_alpha"
            android:title="@string/background_alpha_title"
            android:summary="@string/background_alpha_summary"
            android:defaultValue="128"
            android:max="255"
            android:min="0"
            android:icon="@drawable/ic_opacity" />

        <SeekBarPreference
            android:key="game_bar_corner_radius"
            android:title="@string/corner_radius_title"
            android:summary="@string/corner_radius_summary"
            android:defaultValue="90"
            android:max="100"
            android:min="0"
            android:icon="@drawable/ic_corners" />

        <SeekBarPreference
            android:key="game_bar_padding"
            android:title="@string/padding_title"
            android:summary="@string/padding_summary"
            android:defaultValue="8"
            android:max="64"
            android:min="0"
            android:icon="@drawable/ic_padding" />

        <SeekBarPreference
            android:key="game_bar_item_spacing"
            android:title="@string/item_spacing_title"
            android:summary="@string/item_spacing_summary"
            android:defaultValue="8"
            android:max="50"
            android:min="0"
            android:icon="@drawable/ic_spacing" />
            
        <ListPreference
            android:key="game_bar_title_color"
            android:title="@string/title_color_title"
            android:summary="@string/title_color_summary"
            android:defaultValue="#FFFFFF"
            android:entries="@array/fps_overlay_color_entries"
            android:entryValues="@array/fps_overlay_color_values"
            android:icon="@drawable/ic_text_color" />

        <ListPreference
            android:key="game_bar_value_color"
            android:title="@string/value_color_title"
            android:summary="@string/value_color_summary"
            android:defaultValue="#4CAF50"
            android:entries="@array/fps_overlay_color_entries"
            android:entryValues="@array/fps_overlay_color_values"
            android:icon="@drawable/ic_number_color" />

        <ListPreference
            android:key="game_bar_position"
            android:title="@string/position_title"
            android:summary="@string/position_summary"
            android:defaultValue="top_center"
            android:entries="@array/fps_overlay_position_entries"
            android:entryValues="@array/fps_overlay_position_values"
            android:icon="@drawable/ic_position" />

        <ListPreference
            android:key="game_bar_format"
            android:title="@string/format_title"
            android:summary="@string/format_summary"
            android:defaultValue="full"
            android:entries="@array/game_bar_format_entries"
            android:entryValues="@array/game_bar_format_values"
            android:icon="@drawable/ic_view" />

        <ListPreference
            android:key="game_bar_update_interval"
            android:title="@string/update_interval_title"
            android:summary="@string/update_interval_summary"
            android:defaultValue="1000"
            android:entries="@array/fps_overlay_update_interval_entries"
            android:entryValues="@array/fps_overlay_update_interval_values"
            android:icon="@drawable/ic_clock" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/split_config_title"
        android:dependency="game_bar_enable">

        <ListPreference
            android:key="game_bar_split_mode"
            android:title="@string/split_mode_title"
            android:summary="@string/split_mode_summary"
            android:defaultValue="side_by_side"
            android:entries="@array/game_bar_split_mode_entries"
            android:entryValues="@array/game_bar_split_mode_values"
            android:icon="@drawable/ic_arrange" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/gesture_controls_title"
        android:dependency="game_bar_enable">

        <SwitchPreferenceCompat
            android:key="game_bar_single_tap_toggle"
            android:title="@string/single_tap_title"
            android:summary="@string/single_tap_summary"
            android:defaultValue="true"
            android:icon="@drawable/ic_tap" />

        <SwitchPreferenceCompat
            android:key="game_bar_doubletap_capture"
            android:title="@string/double_tap_title"
            android:summary="@string/double_tap_summary"
            android:defaultValue="true"
            android:icon="@drawable/ic_double_tap" />

        <SwitchPreferenceCompat
            android:key="game_bar_longpress_enable"
            android:title="@string/long_press_title"
            android:summary="@string/long_press_summary"
            android:defaultValue="true"
            android:icon="@drawable/ic_long_press" />

        <ListPreference
            android:key="game_bar_longpress_timeout"
            android:title="@string/long_press_timeout_title"
            android:summary="@string/long_press_timeout_summary"
            android:defaultValue="500"
            android:entries="@array/game_bar_longpress_entries"
            android:entryValues="@array/game_bar_longpress_values"
            android:icon="@drawable/ic_timer"
            android:dependency="game_bar_longpress_enable" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/capture_logs_title"
        android:dependency="game_bar_enable">

        <Preference
            android:key="game_bar_capture_start"
            android:title="@string/start_logging_title"
            android:summary="@string/start_logging_summary"
            android:icon="@drawable/ic_play" />

        <Preference
            android:key="game_bar_capture_stop"
            android:title="@string/stop_logging_title"
            android:summary="@string/stop_logging_summary"
            android:icon="@drawable/ic_stop" />

        <Preference
            android:key="game_bar_capture_export"
            android:title="@string/export_logs_title"
            android:summary="@string/export_logs_summary"
            android:icon="@drawable/ic_export" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/auto_enable_title">

        <SwitchPreferenceCompat
            android:key="game_bar_auto_enable"
            android:title="@string/auto_enable_switch_title"
            android:summary="@string/auto_enable_switch_summary"
            android:defaultValue="false"
            android:icon="@drawable/ic_toggle_auto" />

        <Preference
            android:key="game_bar_app_selector"
            android:title="@string/select_apps_title"
            android:summary="@string/select_apps_summary"
            android:icon="@drawable/ic_add_app" />

        <Preference
            android:key="game_bar_app_remover"
            android:title="@string/remove_apps_title"
            android:summary="@string/remove_apps_summary"
            android:icon="@drawable/ic_remove_app" />
    </PreferenceCategory>

</PreferenceScreen>