<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2025 The Android Open Source Project
     SPDX-License-Identifier: Apache-2.0
-->
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:settings="http://schemas.android.com/apk/res-auto"
    android:title="@string/auto_hbm_title"
    android:icon="@drawable/ic_auto_brightness">

    <com.android.settingslib.widget.TopIntroPreference
        android:key="auto_hbm_intro"
        android:title="@string/auto_hbm_summary"
        app:allowDividerBelow="true" />

    <com.android.settingslib.widget.MainSwitchPreference
        android:key="auto_hbm"
        android:title="@string/auto_hbm_main_switch_title"
        android:summary="@string/auto_hbm_main_switch_summary"
        android:icon="@drawable/ic_toggle_auto_hbm"
        android:defaultValue="false"
        app:showMaterialSwitchColors="true" />

    <com.android.settingslib.widget.UsageProgressBarPreference
        android:key="current_lux_level"
        android:title="@string/current_lux_title"
        android:summary="@string/current_lux_summary"
        android:icon="@drawable/ic_brightness_auto"
        android:selectable="false"
        app:usageTitle="@string/current_lux_value"
        app:bottomTitle="@string/recommended_lux_range"
        app:progress="50"
        app:total="100" />

    <PreferenceCategory
        android:title="@string/settings_category_title"
        android:dependency="auto_hbm">

        <org.lineageos.settings.CustomSeekBarPreference
            android:key="auto_hbm_threshold"
            android:title="@string/auto_hbm_threshold_title"
            android:summary="@string/auto_hbm_threshold_summary"
            android:icon="@drawable/ic_threshold"
            android:max="60000"
            android:min="2000"
            settings:units="@string/lux_units"
            android:defaultValue="20000" />

        <org.lineageos.settings.CustomSeekBarPreference
            android:key="auto_hbm_enable_time"
            android:title="@string/auto_hbm_enable_time_title"
            android:summary="@string/auto_hbm_enable_time_summary"
            android:icon="@drawable/ic_timer"
            android:max="10"
            android:min="0"
            settings:units="@string/seconds_units"
            android:defaultValue="0" />

        <org.lineageos.settings.CustomSeekBarPreference
            android:key="auto_hbm_disable_time"
            android:title="@string/auto_hbm_disable_time_title"
            android:summary="@string/auto_hbm_disable_time_summary"
            android:icon="@drawable/ic_timer_off"
            android:max="10"
            android:min="0"
            settings:units="@string/seconds_units"
            android:defaultValue="1" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/info_category_title">

        <Preference
            android:title="@string/battery_impact_title"
            android:summary="@string/battery_impact_summary"
            android:icon="@drawable/ic_battery_info"
            android:selectable="false" />

        <Preference
            android:title="@string/recommendations_title"
            android:summary="@string/recommendations_summary"
            android:icon="@drawable/ic_recommendations"
            android:selectable="false" />
    </PreferenceCategory>
</PreferenceScreen>