<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2015 The CyanogenMod Project
                   2018-2025 The LineageOS Project

     Licensed under the Apache License, Version 2.0 (the "License")
-->
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:title="@string/ambient_display_title"
    android:icon="@drawable/ic_ambient_display">

    <com.android.settingslib.widget.MainSwitchPreference
        android:key="doze_enable"
        android:title="@string/ambient_display_enable_title"
        android:defaultValue="false"
        android:icon="@drawable/ic_toggle_ambient"
        app:showMaterialSwitchColors="true" />

    <PreferenceCategory
        android:title="@string/aod_category_title"
        android:icon="@drawable/ic_always_on"
        android:dependency="doze_enable">

        <SwitchPreferenceCompat
            android:key="always_on_display"
            android:title="@string/ambient_display_always_on_title"
            android:summary="@string/ambient_display_always_on_summary"
            android:defaultValue="false"
            android:icon="@drawable/ic_doze_aod"
            android:disableDependentsState="true"
            android:persistent="false" />

        <ListPreference
            android:key="doze_brightness"
            android:title="@string/doze_brightness_title"
            android:summary="@string/doze_brightness_summary"
            android:defaultValue="2"
            android:entries="@array/doze_brightness_level"
            android:entryValues="@array/doze_brightness_level_mode"
            android:icon="@drawable/ic_brightness"
            android:dependency="always_on_display" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/gestures_category_title"
        android:icon="@drawable/ic_gesture"
        android:dependency="doze_enable">

        <SwitchPreferenceCompat
            android:key="doze_pulse_on_pick_up"
            android:title="@string/doze_pulse_on_pick_up_title"
            android:summary="@string/doze_pulse_on_pick_up_summary"
            android:defaultValue="true"
            android:icon="@drawable/ic_pick_up" />

        <SwitchPreferenceCompat
            android:key="doze_pulse_on_notifications"
            android:title="@string/doze_pulse_on_notification_title"
            android:summary="@string/doze_pulse_on_notification_summary"
            android:defaultValue="true"
            android:icon="@drawable/ic_notification" />

        <SwitchPreferenceCompat
            android:key="doze_pulse_on_double_tap"
            android:title="@string/doze_pulse_on_double_tap_title"
            android:summary="@string/doze_pulse_on_double_tap_summary"
            android:defaultValue="true"
            android:icon="@drawable/ic_double_tap" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/advanced_settings_title"
        android:icon="@drawable/ic_settings"
        android:dependency="doze_enable">

        <ListPreference
            android:key="doze_schedule_type"
            android:title="@string/doze_schedule_type_title"
            android:summary="@string/doze_schedule_type_summary"
            android:defaultValue="0"
            android:entries="@array/doze_schedule_type_entries"
            android:entryValues="@array/doze_schedule_type_values"
            android:icon="@drawable/ic_schedule" />

        <Preference
            android:key="doze_time_from"
            android:title="@string/doze_time_from_title"
            android:summary="20:00"
            android:icon="@drawable/ic_sunset"
            android:dependency="doze_schedule_type" />

        <Preference
            android:key="doze_time_to"
            android:title="@string/doze_time_to_title"
            android:summary="07:00"
            android:icon="@drawable/ic_sunrise"
            android:dependency="doze_schedule_type" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/info_category_title"
        android:icon="@drawable/ic_info">

        <Preference
            android:title="@string/battery_impact_title"
            android:summary="@string/battery_impact_summary"
            android:icon="@drawable/ic_battery_info"
            android:selectable="false" />

        <Preference
            android:title="@string/compatibility_info_title"
            android:summary="@string/compatibility_info_summary"
            android:icon="@drawable/ic_compatibility"
            android:selectable="false" />
    </PreferenceCategory>
</PreferenceScreen>