<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:title="@string/clear_speaker_title"
    android:icon="@drawable/ic_speaker_main">

    <androidx.preference.SwitchPreference
        android:key="clear_speaker_pref"
        android:title="@string/clear_speaker_title"
        android:summary="@string/clear_speaker_summary"
        app:useSimpleSummaryProvider="true"
        android:icon="@drawable/ic_clear_speaker"
        app:showMaterialSwitchColors="true" />

    <com.android.settingslib.widget.FooterPreference
        android:key="footer_preference"
        android:title="@string/clear_speaker_description"
        android:icon="@drawable/ic_info"
        android:layout="@layout/preference_footer"
        android:selectable="false" />

    <Preference
        android:key="warning_preference"
        android:title="@string/clear_speaker_warning_title"
        android:summary="@string/clear_speaker_warning_summary"
        android:icon="@drawable/ic_warning"
        android:selectable="false" />
</PreferenceScreen>