<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2015 The CyanogenMod Project
                   2018-2025 The LineageOS Project
     Licensed under the Apache License, Version 2.0 (the "License")
-->
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:title="@string/htsr_title"
    android:icon="@drawable/ic_touch_sampling">

    <SwitchPreferenceCompat
        android:key="htsr_enable"
        android:title="@string/htsr_enable_title"
        android:summary="@string/htsr_enable_summary"
        android:defaultValue="false"
        android:icon="@drawable/ic_toggle_touch"
        android:showDefault="false"
        app:switchPadding="8dp"
        app:useSimpleSummaryProvider="true" />

    <Preference
        android:key="htsr_warning"
        android:summary="@string/htsr_warning_summary"
        android:selectable="false"
        android:icon="@drawable/ic_warning" />
</PreferenceScreen>